--- a/school-in-the-cloud/package.json
+++ b/school-in-the-cloud/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "all": "^0.0.0",
+    "availity-reactstrap-validation": "^2.6.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
@@ -19,7 +20,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "yarn": "^1.22.4"
+    "yarn": "^1.22.4",
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "react-scripts start",
